data/diff_tests/wasmtime/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1343.wast
;; 4. **Test Description:** Implement a scenario where an imported function contains a `br` instruction with missing operands on the stack, leading to an error. Verify if the error is correctly detected and reported.    - **Constraint:** Tests the requirement for correct operand handling and error detection in branched instructions.    - **Relation:** Ensures that operand stack preservation rules are enforced when transitioning through module boundaries.

(assert_invalid
  (module
    (import "env" "some_func" (func $impfunc))
    (func $test
      (call $impfunc)
      (br 0)
    )
  )
  "type mismatch"
)